--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+							<a class="navbar-brand" href="#"><img src="img/main-logo.png"></a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
 							</button>
@@ -156,7 +156,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
@@ -182,7 +182,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
@@ -212,7 +212,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
@@ -238,7 +238,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
@@ -268,7 +268,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
@@ -294,7 +294,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img.png">
+							<img src="img/vegi-img.png">
 							<div class="grocy-content">
 								<h6>Store Name</h6>
 								<p>2km away</p>
