--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>Ap Mart</title>
 	<!-- meta tag -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--style sheet -->
@@ -387,6 +387,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- footer -->
 
 	</div>
 	<!-- structure -->
