--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
 	<!-- js animation -->
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
@@ -346,15 +347,13 @@
 							<h3>Reach us Out</h3>
 							<ul>
 								<li><a href="">
-									<i class="fa fa-envelope-o" aria-hidden="true"></i>
-									<span>Email	<br>
-									      info@pmart.pk 
+									<!-- <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
+									<span>Email: info@pmart.pk 
 								    </span>
 								</a></li>
 								<li><a href="">
-									<i class="fa fa-phone" aria-hidden="true"></i>
-									<span>Phone <br>
-                                          0331-0064323
+									<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
+									<span>Phone: 0331-0064323
                                     </span>
 								</a></li>
 							</ul>
