--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
 	<!-- js animation -->
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
@@ -24,7 +25,7 @@
     <!-- structure -->
 	<div class="structure">
 		  
-         <!-- header -->
+        <!-- header -->
 		<header class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -121,6 +122,36 @@
 			</div>
 		</section>
 		<!-- second nav -->
+
+		<!-- shop-content -->
+		<section class="shop-content">
+			<div class="shop-content-parent">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+							<div class="shop-div-parent">
+								<div class="shop-div">
+									<div class="row">
+										<div class="col-lg-1 col-md-2 col-sm-1">
+											<div class="shop-online">
+												<h4>G</h4>
+											</div>
+										</div>
+										<div class="col-lg-11 col-md-10 col-sm-11">
+											<div class="shop-name">
+												<h2>Greelogix Shop</h2>
+												<p><i class="fa fa-star" aria-hidden="true"></i> 4.7(104) . 3km away</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- shop-content -->
 
 		<!-- catagories -->
 		<section class="catagories">
@@ -307,15 +338,13 @@
 							<h3>Reach us Out</h3>
 							<ul>
 								<li><a href="">
-									<i class="fa fa-envelope-o" aria-hidden="true"></i>
-									<span>Email	<br>
-									      info@pmart.pk 
+									<!-- <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
+									<span>Email: info@pmart.pk 
 								    </span>
 								</a></li>
 								<li><a href="">
-									<i class="fa fa-phone" aria-hidden="true"></i>
-									<span>Phone <br>
-                                          0331-0064323
+									<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
+									<span>Phone: 0331-0064323
                                     </span>
 								</a></li>
 							</ul>
