--- a/store.html
+++ b/store.html
@@ -88,83 +88,22 @@
 		</header>
 		<!-- header -->
 
-		<!-- content -->
-		<section class="content">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-12 col-sm-12">
-						<div class="content-parent">
-							<div class="content-paragraph">
-								<h2>Order with a tap of Voice</h2>
-								<p>You can place order by sending us a voice note, pictures of a grocery list or even a text message</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- content -->
-
-		<!-- popular-brand -->
-		<section class="popular-brand">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-12 col-sm-12">
-						<div class="popular-brand-heading">
-							<h4>Popular brands near you</h4>
-						</div>
-						<div class="row">
-							<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-								<div class="popular-box">
-									<img src="img/bread.png">
-									<div class="popular-content">
-										<h6>Bread & Beyond</h6>
-										<p>2km away</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-								<div class="popular-box">
-									<img src="img/gormy.png">
-									<div class="popular-content">
-										<h6>Gourmet Foods</h6>
-										<p>1.5km away</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-								<div class="popular-box">
-									<img src="img/bazar.png">
-									<div class="popular-content">
-										<h6>Bread & Beyond</h6>
-										<p>2km away</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- popular-brand -->
-
 		<!-- grocy -->
-		<section class="grocy">
+		<section class="grocy grocry-store">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="grocy-heading">
 						    <h4>Groceries and more</h4>
-						    <a href="store.html"><img src="img/ArrowRight.png"></a>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row store-row">
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/vegi-img.png">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
 							<div class="grocy-content">
-								<h6>Store Name</h6>
+								<a href="shop.html"><h6>Store Name</h6></a>
 								<p>2km away</p>
 								<ul>
 									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
@@ -175,9 +114,9 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/img1.png">
+							<a href="shop.html"><img src="img/img1.png"></a>
 							<div class="grocy-content">
-								<h6>Store Name</h6>
+								<a href="shop.html"><h6>Store Name</h6></a>
 								<p>2km away</p>
 								<ul>
 									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
@@ -188,9 +127,140 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="grocy-box">
-							<img src="img/vegi-img.png">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
 							<div class="grocy-content">
-								<h6>Store Name</h6>
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- row 2 store -->
+
+				<div class="row store-row">
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/img1.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- row 3 store -->
+
+				<div class="row store-row">
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/img1.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- rwo 4 store -->
+
+				<div class="row store-row">
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/img1.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
+								<p>2km away</p>
+								<ul>
+									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
+									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-12 col-sm-12">
+						<div class="grocy-box">
+							<a href="shop.html"><img src="img/vegi-img.png"></a>
+							<div class="grocy-content">
+								<a href="shop.html"><h6>Store Name</h6></a>
 								<p>2km away</p>
 								<ul>
 									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
@@ -203,135 +273,6 @@
 			</div>
 		</section>
 		<!-- grocry 1 -->
-
-		<!-- grocy2 -->
-		<section class="grocy">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<div class="grocy-heading">
-						    <h4>60% OFF</h4>
-						    <img src="img/ArrowRight.png">
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/vegi-img.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/img1.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/vegi-img.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- grocery2 -->
-
-		<!-- grocy3 -->
-		<section class="grocy">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<div class="grocy-heading">
-						    <h4>Our Pick</h4>
-						    <img src="img/ArrowRight.png">
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/vegi-img.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/img1.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-12 col-sm-12">
-						<div class="grocy-box">
-							<img src="img/vegi-img.png">
-							<div class="grocy-content">
-								<h6>Store Name</h6>
-								<p>2km away</p>
-								<ul>
-									<li><i class="fa fa-star" aria-hidden="true"></i>4.7 . Delivery: Rs.300</li>
-									<li class="grocry-color"><i class="fa fa-tag" aria-hidden="true"></i>20% OFF orders above Rs.1,000</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- grocery 3 -->
-
-		<!-- shop -->
-		<section class="shop">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-12 col-sm-12">
-						<div class="shop-box">
-							<h4>List your shop on Pmart</h4>
-							<p>We are providing a digital platform for vendors to set their shops on. With our Master Catalogue, you can add items without any hassle at their market price.<br><br>
-							Interested in expanding your business? Let’s start our partnership today!</p>
-							<button class="btn btn-danger">Get Started</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- shop -->
 
 		<!-- footer -->
 		<section class="footer">
@@ -403,7 +344,6 @@
 	<script src="js/bootstrap.js"></script>
 	<!-- custom js -->
 	<script src="js/custom.js"></script>
-
 
 </body>
 </html>
