--- a/cart-detail.html
+++ b/cart-detail.html
@@ -36,7 +36,7 @@
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="#"><img src="img/main-logo.png"></a>
+							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
 							</button>
