--- a/cart.html
+++ b/cart.html
@@ -60,31 +60,58 @@
 			  	</div>
 			  </div>
 			  <div class="product-cart">
-		  	 <div class="row">
-		  		<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
-		  			<div class="cart-carrot-item">
-		  				<img src="img/olper.png">
-		  				<h6>Mitchells Carrot Pickle</h6>
-		  				<p>340g • Rs.150</p>
-		  			</div>
-		  		</div>
-		  		<div class="col-lg-6 col-md-6 col-sm-12">
-			         <div class="cart-add product-cart-add-item">
-			         	<div class="form-group product-cart-form-group">
-					        <div class="input-group">
-					            <div class="input-group-btn">
-					                <button id="down-two" class="btn btn-default" onclick=" down('0')"><img src="img/delete.png"></button>
-					            </div>
-					            <input type="text" id="myNumber-two" class="form-control input-number" value="1" />
-					            <div class="input-group-btn">
-					                <button id="up-two" class="btn btn-default" onclick="up('10')"><img src="img/plus.png"></span></button>
-					            </div>
-					        </div>
-					    </div>
-			         </div>
-		  		</div>
-		  	</div>
-		  </div>
+			  	 <div class="row">
+			  		<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
+			  			<div class="cart-carrot-item">
+			  				<img src="img/olper.png">
+			  				<h6>Mitchells Carrot Pickle</h6>
+			  				<p>340g • Rs.150</p>
+			  			</div>
+			  		</div>
+			  		<div class="col-lg-6 col-md-6 col-sm-12">
+				         <div class="cart-add product-cart-add-item">
+				         	<div class="form-group product-cart-form-group">
+						        <div class="input-group">
+						            <div class="input-group-btn">
+						                <button id="down-two" class="btn btn-default" onclick=" down('0')"><img src="img/delete.png"></button>
+						            </div>
+						            <input type="text" id="myNumber-two" class="form-control input-number" value="1" />
+						            <div class="input-group-btn">
+						                <button id="up-two" class="btn btn-default" onclick="up('10')"><img src="img/plus.png"></span></button>
+						            </div>
+						        </div>
+						    </div>
+				         </div>
+			  		</div>
+			  	</div>
+			  </div>
+			  <!-- row 3 -->
+			  <div class="product-cart">
+			  	 <div class="row">
+			  		<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
+			  			<div class="cart-carrot-item">
+			  				<img src="img/olper.png">
+			  				<h6>Mitchells Carrot Pickle</h6>
+			  				<p>340g • Rs.150</p>
+			  			</div>
+			  		</div>
+			  		<div class="col-lg-6 col-md-6 col-sm-12">
+				         <div class="cart-add product-cart-add-item">
+				         	<div class="form-group product-cart-form-group">
+						        <div class="input-group">
+						            <div class="input-group-btn">
+						                <button id="down-two" class="btn btn-default" onclick=" down('0')"><img src="img/delete.png"></button>
+						            </div>
+						            <input type="text" id="myNumber-two" class="form-control input-number" value="1" />
+						            <div class="input-group-btn">
+						                <button id="up-two" class="btn btn-default" onclick="up('10')"><img src="img/plus.png"></span></button>
+						            </div>
+						        </div>
+						    </div>
+				         </div>
+			  		</div>
+			  	</div>
+			  </div>
 		  </div>
 		  <div class="order-submit product-cart-order-submit">
 			<div class="total-price-parent cost-detail-final">
@@ -124,7 +151,7 @@
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="#"><img src="img/main-logo.png"></a>
+							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
 							</button>
@@ -145,7 +172,7 @@
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-12">
+					<div class="col-lg-3 col-md-3 col-sm-12 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -166,7 +193,7 @@
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-12 col-13">
+					<div class="col-lg-2 col-md-2 col-sm-12 col-13 login-column">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
