--- a/product.html
+++ b/product.html
@@ -152,7 +152,7 @@
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="#"><img src="img/main-logo.png"></a>
+							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
 							</button>
@@ -173,7 +173,7 @@
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-12">
+					<div class="col-lg-3 col-md-3 col-sm-12 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -194,7 +194,7 @@
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-12 col-13">
+					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
